Feat: hoàn thành các chức năng cơ bản và tích hợp API VNPay